Fixed spacing issues

--- a/app/assets/stylesheets/pages.css.sass
+++ b/app/assets/stylesheets/pages.css.sass
@@ -12,7 +12,7 @@
     margin: 0 1em 1em 0
     position: relative
     width: 70px
-    height: 70px
+    height: 100px
     a
       cursor: pointer
     &.active
