--- a/app/assets/stylesheets/stories.css.sass
+++ b/app/assets/stylesheets/stories.css.sass
@@ -4,7 +4,7 @@
 .story,
 .featured_story
   float: left
-  margin-bottom: 1em
+  margin-bottom: 2em
   list-style: none
   .thumbnail
     position: relative
